[gd_scene load_steps=7 format=2]

[ext_resource path="res://Image/Background/Fondo.jpg" type="Texture" id=1]
[ext_resource path="res://Sripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/ButtonsDynamicFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sounds_Music/Music/Menu.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds_Music/SFX/Botones.ogg" type="AudioStream" id=6]

[node name="Control" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fondo" type="Sprite" parent="."]
scale = Vector2( 0.749634, 0.789474 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Titulo" type="Label" parent="."]
margin_left = 432.0
margin_top = 195.0
margin_right = 592.0
margin_bottom = 237.0
custom_fonts/font = ExtResource( 3 )
text = "RUN & JUMP"
__meta__ = {
"_edit_lock_": true
}

[node name="Container" type="VBoxContainer" parent="Titulo"]
margin_left = 15.0
margin_top = 105.0
margin_right = 145.0
margin_bottom = 197.0
__meta__ = {
"_edit_lock_": true
}

[node name="Boton Comenzar" type="Button" parent="Titulo/Container"]
margin_right = 130.0
margin_bottom = 28.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
text = "START"
__meta__ = {
"_edit_lock_": true
}

[node name="Boton Instrucciones" type="Button" parent="Titulo/Container"]
margin_top = 32.0
margin_right = 130.0
margin_bottom = 60.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
text = "CREDITOS"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Boton Salir" type="Button" parent="Titulo/Container"]
margin_top = 64.0
margin_right = 130.0
margin_bottom = 92.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
text = "QUIT"
__meta__ = {
"_edit_lock_": true
}

[node name="Creditos" type="Label" parent="."]
visible = false
margin_left = 35.0
margin_top = 17.0
margin_right = 1002.0
margin_bottom = 550.0
custom_fonts/font = ExtResource( 3 )
text = "CREDITOS VARIOS"
__meta__ = {
"_edit_lock_": true
}

[node name="Boton Menu" type="Button" parent="Creditos"]
margin_left = 405.5
margin_top = 530.0
margin_right = 535.5
margin_bottom = 558.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
text = "MENU"
__meta__ = {
"_edit_lock_": true
}

[node name="Music" type="Node" parent="." groups=["Music"]]

[node name="Menu" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 5 )

[node name="SFX" type="Node" parent="." groups=["SFX"]]

[node name="Botones" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )

[connection signal="pressed" from="Titulo/Container/Boton Comenzar" to="." method="_on_Boton_Comenzar_pressed"]
[connection signal="pressed" from="Titulo/Container/Boton Instrucciones" to="." method="_on_Boton_Creditos_pressed"]
[connection signal="pressed" from="Titulo/Container/Boton Salir" to="." method="_on_Boton_Salir_pressed"]
[connection signal="pressed" from="Creditos/Boton Menu" to="." method="_on_Boton_Menu_pressed"]
